# nornir_cli

./: .gitignore  404.html  Dockerfile  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  release.yml
docs/: examples.md  index.md  useful.md  workflow.md
examples/: index.html
examples/custom_runbooks/: README.md
examples/custom_runbooks/aaa/: cmd_create_fw_users.py  cmd_delete_fw_users.py
examples/custom_runbooks/aaa/templates/: create_fw_user.j2  delete_fw_users.j2  disp_manager_user.template
examples/custom_runbooks/dhcp_snooping/: cmd_dhcp_snooping.py
examples/custom_runbooks/dhcp_snooping/templates/: dhcp_snooping.j2  disp_int.template
nornir_cli/: nornir_cli.py
nornir_cli/common_commands/: __init__.py  cmd_change_credentials.py  cmd_filter.py  cmd_init.py  cmd_print_result.py  cmd_show_inventory.py  cmd_write_file.py  cmd_write_result.py  cmd_write_results.py  common.py  print_result.py  static_options.py  write_result.py  write_results.py
nornir_cli/plugin_commands/: cmd_common.py
nornir_cli/transform/: function.py
search/: search_index.json
tests/: test_nornir_cli.py
useful/: index.html
workflow/: index.html
